# contracts/openapi.json
@@ -6,7 +6,15 @@
         "properties": {
           "age_group": {
             "default": "unknown",
-            "maxLength": 50,
+            "enum": [
+              "unknown",
+              "neonate",
+              "infant",
+              "child",
+              "adolescent",
+              "adult",
+              "older_adult"
+            ],
             "title": "Age Group",
             "type": "string"
           },
@@ -369,6 +377,15 @@
         "additionalProperties": false,
         "properties": {
           "age_group": {
+            "enum": [
+              "unknown",
+              "neonate",
+              "infant",
+              "child",
+              "adolescent",
+              "adult",
+              "older_adult"
+            ],
             "title": "Age Group",
             "type": "string"
           },
